Handle SIGHUP.  SERVER-1410